--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
         }
 
         .btn {
+            font-family: 'Playfair Display', serif;
             padding: 10px 20px;
             background-color: #9b9b9b;
             color: #ffffff;
             border: none;
-            border-radius: 5px;
+            border-radius: 30px;
             cursor: pointer;
             margin: 0 5px;
             transition: background-color 0.3s ease;
@@ -78,7 +79,9 @@
     <div class="content-container">
         <div class="container">
             <h1>Discover Your Style</h1>
-            <p>Explore the essence of fashion and design with customizable options.</p>
+            <p>Unlock your Fasion Identity: 
+                Eploring Personal Style
+            </p>
             <div class="image-container">
                 <img class="image" src="Pictures/formals.png" alt="Fashion Image 1">
                 <img class="image" src="Pictures/sundress.jpeg" alt="Fashion Image 2">
